--- a/OS_100days/views/signup.ejs
+++ b/OS_100days/views/signup.ejs
@@ -1,4 +1,5 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %> 
+<%- include('partials/navbar.ejs') %>
 
 <main>
 	<section class="login">
