--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,10 +9,10 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- ADD LINKS -->
             <li class="nav-list">
-                <a href="about.html" class="nav-link">About</a>
+                <a href="about" class="nav-link">About</a>
             </li>
             <li class="nav-list">
-                <a href="about.html#faqs" class="nav-link">FAQs</a>
+                <a href="/#faqs" class="nav-link">FAQs</a>
             </li>            </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
