--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,10 +5,10 @@
         Community
     </p>
     <div class="socials">
-        <a href="#" target="_blank"> <i class="ri-discord-line"></i> </a>
+        <a href="https://discord.gg/AntJA73Qx2" target="_blank"> <i class="ri-discord-line"></i> </a>
 
-        <a href="#" target="_blank"><i class="ri-twitter-line"></i></a>
-        <a href="#" target="_blank"><i class="ri-youtube-line"></i></a>
+        <a href="https://twitter.com/codingwithdrewk" target="_blank"><i class="ri-twitter-line"></i></a>
+        <a href="https://www.youtube.com/channel/UC-7yWq_BrlAHROb_nx_em3g" target="_blank"><i class="ri-youtube-line"></i></a>
         <!-- ADD SOCIAL ICONS LINKED TO THE COMMUNITY SOCIALS  -->
     </div>
 </footer>
