finished making minor changes, add profile page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,6 @@
+
+<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
+<%- include('partials/footer.ejs') %>
