--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -1,6 +1,5 @@
-<%- include('partials/head.ejs') %>
-<%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
 <main>
-    <section class="FAQs"></section>
+  <section class="FAQs"></section>
 </main>
 <%- include('partials/footer.ejs') %>
