--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,30 +1,40 @@
 <header class="main-header">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a href="#"><img src="https://p289.p2.n0.cdn.getcloudapp.com/items/OAujvYxD/e92d2e0f-3fff-4124-8e9b-18ea4bf87f3a.png?v=3242609435910c2ed287e97b3a3ef9c2" alt="100DOC Reminder App logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- ADD LINKS -->
-            <li class="nav-list">
-                <a href="about" class="nav-link">About</a>
-            </li>
-            <li class="nav-list">
-                <a href="/#faqs" class="nav-link">FAQs</a>
-            </li>            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-
-    <nav class="nav-bar">
-        <ul class="nav-menu">
-
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a href="/"
+        ><img
+          src="https://p289.p2.n0.cdn.getcloudapp.com/items/OAujvYxD/e92d2e0f-3fff-4124-8e9b-18ea4bf87f3a.png?v=3242609435910c2ed287e97b3a3ef9c2"
+          alt="100DOC Reminder App logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- ADD LINKS -->
+          <li class="nav-list">
+            <a href="/about" class="nav-link">About</a>
+          </li>
+          <li class="nav-list">
+            <a href="/about/#faqs" class="nav-link">FAQs</a>
+          </li>
+          <li class="nav-list">
+            <a href="/profile" class="nav-link">Profile</a>
+          </li>
         </ul>
-    </nav>
+      </div>
+    </div>
+  </nav>
+
+  <nav class="nav-bar">
+    <ul class="nav-menu"></ul>
+  </nav>
 </header>
