--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,6 +1,5 @@
-    <%- include('partials/head.ejs') %>
-    <%- include('partials/navbar.ejs') %>
-        <main>
-            <section class="Sign in"></section>
-        </main>
-    <%- include('partials/footer.ejs') %>
+<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<main>
+  <section class="Sign in"></section>
+</main>
+<%- include('partials/footer.ejs') %>
