--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %> <%- include('partials/carrousel.ejs') %>
 
 <main>
   <section class="profile">
