--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,40 +1,65 @@
-<header class="main-header">
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a href="/"
-        ><img
-          src="https://p289.p2.n0.cdn.getcloudapp.com/items/OAujvYxD/e92d2e0f-3fff-4124-8e9b-18ea4bf87f3a.png?v=3242609435910c2ed287e97b3a3ef9c2"
-          alt="100DOC Reminder App logo"
-      /></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <!-- ADD LINKS -->
-          <li class="nav-list">
-            <a href="/about" class="nav-link">About</a>
-          </li>
-          <li class="nav-list">
-            <a href="/about/#faqs" class="nav-link">FAQs</a>
-          </li>
-          <li class="nav-list">
-            <a href="/profile" class="nav-link">Profile</a>
-          </li>
-        </ul>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Container wrapper -->
+  <div class="container" style="margin-right:auto">
+    <!-- Navbar brand -->
+    <a class="navbar-brand me-2" href="https://www.100daysofcode.com/">
+      <img
+        src="https://p289.p2.n0.cdn.getcloudapp.com/items/OAujvYxD/e92d2e0f-3fff-4124-8e9b-18ea4bf87f3a.png?v=3242609435910c2ed287e97b3a3ef9c2"
+        height="40"
+        alt="#100daysofcode"
+        loading="lazy"
+        style="margin-top: 1px;"
+      />
+    </a>
+
+    <!-- Toggle button -->
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-mdb-toggle="collapse"
+      data-mdb-target="#navbarButtonsExample"
+      aria-controls="navbarButtonsExample"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
+    </button>
+
+    <!-- Collapsible wrapper -->
+    <div class="collapse navbar-collapse" id="navbarButtonsExample">
+      <!-- Left links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Connect</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Conact</a>
+        </li>
+      </ul>
+      <!-- Left links -->
+
+      <div class="d-flex align-items-center">
+        <button type="button" class="btn btn-link px-2 me-2">
+          Login
+        </button>
+        <button type="button" class="btn btn-primary me-3">
+          Sign up
+        </button>
       </div>
     </div>
-  </nav>
-
-  <nav class="nav-bar">
-    <ul class="nav-menu"></ul>
-  </nav>
-</header>
+    <!-- Collapsible wrapper -->
+  </div>
+  <!-- Container wrapper -->
+</nav>
+<!-- Navbar -->
+</body>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</html>
