--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,29 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- LINK CSS  -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://p289.p2.n0.cdn.getcloudapp.com/items/wbuQqE1Z/1b96f9fb-89b8-4b01-a228-4bdcf7100a44.png?v=1b6ee0336958010c37262b9a119b9c07"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-    <title><%= title %></title>
-  </head>
-
-  <body></body>
 </html>
+<!DOCTYPE HTML>
+<!--
+    Striped by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+  -->
+<html>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <title>
+    <%= title %>
+  </title>
+</head>
+
+<body class="is-preload">
