--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %>
 <main>
   <section class="profile">
     <!-- needs to be a form that a user populates with information that propagates to the home page -->
@@ -8,4 +8,5 @@
     </form>
   </section>
 </main>
+<%- include('partials/sidebar.ejs') %>
 <%- include('partials/footer.ejs') %>
