--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,5 +1,6 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %>
 <main>
   <section class="Sign in"></section>
 </main>
+<%- include('partials/sidebar.ejs') %>
 <%- include('partials/footer.ejs') %>
