--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %> 
 
 <main>
   <section class="login">
@@ -26,5 +26,5 @@
     </form>
   </section>
 </main>
-
+<%- include('partials/sidebar.ejs') %>
 <%- include('partials/footer.ejs') %>
