--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,8 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
-<main>
-  <section class="about">
-    <h1>About this Project</h1>
+<%- include('partials/head.ejs') %> 
+<div id="content">
+  <div class="inner">
+  <article class="box post post-excerpt">
+    <h2>About this Project</h2>
     <p>
       Ever do the
       <a target="_blank " href="https://100daysofcode.com"
@@ -19,10 +20,15 @@
       engineers learning about collaboration on Github. We hope you find it a
       really useful tool to track your progress through 100daysofcode.
     </p>
-  </section>
-  <section class="faqs" id="faqs">
+  </article>
+  <article class="box post post-excerpt">    
     <h2>F.A.Qs</h2>
     <!-- ONLY QUESTION SHOULD BE VISIBLE ANSWER SHOULD BE DISPLAYED ON CLICK  -->
-  </section>
-</main>
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </article>
+</div>
+</div>
+
+<%- include('partials/sidebar.ejs') %>
 <%- include('partials/footer.ejs') %>
