--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,39 +1,54 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %> 
+<!-- Content -->
+<div id="content">
+  <div class="inner">
+    <!-- Post -->
+    <article class="box post post-excerpt">
+      <header>
+        <!--
+                                Note: Titles and subtitles will wrap automatically when necessary, so don't worry
+                                if they get too long. You can also remove the <p> entirely if you don't
+                                need a subtitle.
+                            -->
+        <h2><a href="#">Welcome to OS_100Days</a></h2>
+        <p>Keep track of your challenge!</p>
+      </header>
+      <div class="info">
+        <!--
+                                Note: The date should be formatted exactly as it's shown below. In particular, the
+                                "least significant" characters of the month should be encapsulated in a <span>
+                                element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
+                                Oh, and if you don't need a date for a particular page or post you can simply delete
+                                the entire "date" element.
 
-<main>
-  <section class="profile">
-    <h3 class="bold">USERNAME:</h3>
-    <p class="user-details"></p>
-    <h3 class="bold">CURRENT CHALLENGE:</h3>
-    <p class="user-details"></p>
-    <h3 class="bold">CHALLENGE DURATION:</h3>
-    <p class="user-details"></p>
-    <h3 class="bold">NO. OF REPO'S WORKED ON:</h3>
-    <p class="user-details"></p>
-    <div class="progress-bar"></div>
-  </section>
-  <section class="Calendar">
-    <!-- SHOULD CONTAIN CALENDAR WHICH CIRCLES CURRENT DATE AND MARKS DATE WITH GIT COMMITS GREEN  -->
-  </section>
-
-  <section class="Repos">
-    <div class="repo-header">
-      <p>REPO NAME</p>
-      <p>STATUS</p>
-      <div class="repo-body">
-        <!--  WOULD CONTAIN REPO USER IS CURRENTLY WORKING ON AND THE STATUS OF THE REPO(WHICH WOULD BE DETERMINED BY THE USER)
-						SHOULD ALSO CONTAIN A COMPLETED BUTTON WHICH CHANGES THE REPO STATUS TO COMPLETED  -->
+                            -->
+        <span class="date"
+          ><span class="month">Jul<span>y</span></span>
+          <span class="day">14</span><span class="year">, 2014</span></span
+        >
+        <!--
+                                Note: You can change the number of list items in "stats" to whatever you want.
+                            -->
+        <ul class="stats">
+          <li><a href="#" class="icon fa-comment">16</a></li>
+          <li><a href="#" class="icon fa-heart">32</a></li>
+          <li><a href="#" class="icon brands fa-twitter">64</a></li>
+          <li><a href="#" class="icon brands fa-facebook-f">128</a></li>
+        </ul>
       </div>
-    </div>
-    <!-- SECTION WHICH WOULD CONTAIN OPEN REPOS AND COMPLETED REPOS  -->
-  </section>
-  <section class="Progress">
-    <h2 class="bold">DAY</h2>
-    <p class="day-num">3</p>
-    <p class="rem-days">/<span class="days">100</span> DAYS</p>
+      <h3 class="bold">USERNAME:</h3>
+      <p class="user-details"></p>
+      <h3 class="bold">CURRENT CHALLENGE:</h3>
+      <p class="user-details"></p>
+      <h3 class="bold">CHALLENGE DURATION:</h3>
+      <p class="user-details"></p>
+      <h3 class="bold">NO. OF REPO'S WORKED ON:</h3>
+      <p class="user-details"></p>
+      <div class="progress-bar"></div>
 
-    <!-- SHOULD INDICATE CURRENT DAY OF CHALLENGE  -->
-    <p class="quote"></p>
-  </section>
-</main>
+    </article>
+  </div>
+</div>
+
+<%- include('partials/sidebar.ejs') %>
 <%- include('partials/footer.ejs') %>
