--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,11 +8,22 @@
         <a href="https://discord.gg/AntJA73Qx2" target="_blank"> <i class="ri-discord-line"></i> </a>
 
         <a href="https://twitter.com/codingwithdrewk" target="_blank"><i class="ri-twitter-line"></i></a>
-        <a href="https://www.youtube.com/channel/UC-7yWq_BrlAHROb_nx_em3g" target="_blank"><i class="ri-youtube-line"></i></a>
+        <a href="https://www.youtube.com/channel/UC-7yWq_BrlAHROb_nx_em3g" target="_blank"><i
+                class="ri-youtube-line"></i></a>
         <!-- ADD SOCIAL ICONS LINKED TO THE COMMUNITY SOCIALS  -->
     </div>
 </footer>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
+
 <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
 </html>
