create user login flow

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <title>
-    <%= title %>
+    <%= console.log(title) %>
   </title>
 </head>
 
