--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,30 +1,30 @@
 <%- include('partials/head.ejs') %> 
 
-<main>
-  <section class="login">
-    <h2>WELCOME</h2>
-    <h3>Sign up</h3>
-    <h3><a href="signin.html">Sign In</a></h3>
-    <form action="">
-      <div class="div">
-        <label for="email">email</label>
-        <input type="email" id="email" required />
-      </div>
-      <div class="div">
-        <label for="username">Username</label>
-        <input type="name" id="username" required />
-      </div>
-      <div>
-        <label for="password">password</label>
-        <input type="password" minlength="8" id="password" required />
-      </div>
-      <div>
-        <label for="c-password">confirm password</label>
-        <input type="password" minlength="8" id="c-password" required />
-      </div>
-      <button type="submit">Sign Up</button>
-    </form>
-  </section>
-</main>
+  <!-- Main -->
+  <div class="container">
+    <h1>Sign up</h1>
+    <form action="/signup/auth" method="POST" enctype="application/json">
+      <div class="control-group">
+        <div class="form-group floating-label-form-group controls">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" name="username" required/>
+        </div>
+        <br />
+        <div class="form-group floating-label-form-group controls">
+          <label for="email">email</label>
+          <input type="email" class="form-control" id="email" name="email" required/>
+        </div>
+        <br />
+        <div class="form-group floating-label-form-group controls">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" name="password" required/>
+        </div>
+        <br />
+        <div class="form-group">
+          <button type="submit" class btn btn-primary id="sendMessaageButton">
+            Signup
+          </button>
+        </div>
+  </div>
 <%- include('partials/sidebar.ejs') %>
 <%- include('partials/footer.ejs') %>
