Update About this project

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,21 +4,20 @@
   <article class="box post post-excerpt">
     <h2>About this Project</h2>
     <p>
-      Ever do the
+      Ever done the
       <a target="_blank " href="https://100daysofcode.com"
         >[100daysofcode.com]</a
       >
-      challenge and find yourself skipping, forgetting which day, etc?
+      challenge and found yourself skipping, forgetting which day you were on, etc?
     </p>
     <p>
-      Well this project aims to correct that with friendly reminders, a simple
+      This project aims to help you stay consistent by giving you friendly reminders, a simple
       way to keep track of what day you are on, and will allow you to tweet
       directly from it (hopefully!).
     </p>
     <p>
       This is an Opensource project designed by a group of aspiring software
-      engineers learning about collaboration on Github. We hope you find it a
-      really useful tool to track your progress through 100daysofcode.
+      engineers that are learning about collaboration on Github. We hope you find this tool very useful as it helps you to track your progress through 100daysofcode.
     </p>
   </article>
   <article class="box post post-excerpt">    
