Modif in issue need contribution css

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
 <main>
+  <div class="container">
   <section class="about">
     <h1>About this Project</h1>
     <p>
@@ -24,5 +25,6 @@
     <h2>F.A.Qs</h2>
     <!-- ONLY QUESTION SHOULD BE VISIBLE ANSWER SHOULD BE DISPLAYED ON CLICK  -->
   </section>
+</div>
 </main>
 <%- include('partials/footer.ejs') %>
