--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %> <%- include('partials/carrousel.ejs') %>
 
 <main>
+  <div class="container">
   <section class="profile">
     <h3 class="bold">USERNAME:</h3>
     <p class="user-details"></p>
@@ -35,5 +36,6 @@
     <!-- SHOULD INDICATE CURRENT DAY OF CHALLENGE  -->
     <p class="quote"></p>
   </section>
+</div>
 </main>
 <%- include('partials/footer.ejs') %>
