--- a/views/partials/carrousel.ejs
+++ b/views/partials/carrousel.ejs
@@ -29,10 +29,7 @@
       <!-- Single item -->
       <div class="carousel-item active">
         <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--x_UTPDPk--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://thepracticaldev.s3.amazonaws.com/i/u5d7sosk30lm7pex8lqc.png" class="d-block w-100" alt="Sunset Over the City"/>
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-        </div>
+        
       </div>
   
       <!-- Single item -->
@@ -123,7 +120,7 @@
                               Some quick example text to build on the card title and make up the bulk of the
                               card's content.
                             </p>
-                            <a href="#!" class="btn btn-primary">Button</a>
+                            <a href="#!" class="btn btn-dark">Button</a>
                           </div>
                         </div>
                       </div>
@@ -145,7 +142,7 @@
                               Some quick example text to build on the card title and make up the bulk of the
                               card's content.
                             </p>
-                            <a href="#!" class="btn btn-primary">Button</a>
+                            <a href="#!" class="btn btn-dark">Button</a>
                           </div>
                         </div>
                       </div>
@@ -164,7 +161,7 @@
                               Some quick example text to build on the card title and make up the bulk of the
                               card's content.
                             </p>
-                            <a href="#!" class="btn btn-primary">Button</a>
+                            <a href="#!" class="btn btn-dark">Button</a>
                           </div>
                         </div>
                       </div>
