--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.1/css/all.min.css">
 <!-- Footer -->
 <footer class="bg-dark text-center text-white">
     <!-- Grid container -->
@@ -5,32 +7,32 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
-            <img src="https://img.icons8.com/ios-glyphs/344/facebook.png" alt="" width="30">
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/groups/100DaysOfCode/" role="button">
+          <i class="fab fa-facebook"></i>
         </a>
   
         <!-- Twitter -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-twitter"></i
-        ></a>
+        <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/ka11away" role="button"
+          ><i class="fab fa-twitter"></i>
+        </a>
   
-        <!-- Google -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-google"></i
-        ></a>
+        <!-- instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/_100DaysOfCode/" role="button"
+          ><i class="fab fa-instagram"></i>
+        </a>
   
-        <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-instagram"></i
-        ></a>
+        <!-- discord -->
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+          <i class="fab fa-discord"></i>
+        </a>
   
-        <!-- Linkedin -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
+        <!-- youtube -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.youtube.com/c/DoTheOpposite" role="button"
+          ><i class="fab fa-youtube"></i>
+        </a>
   
         <!-- Github -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Kallaway/100-days-of-code" role="button"
           ><i class="fab fa-github"></i
         ></a>
       </section>
