--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
   <!-- Container wrapper -->
   <div class="container" style="margin-right:auto">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="https://www.100daysofcode.com/">
+    <a class="navbar-brand me-2" href="/">
       <img
         src="https://p289.p2.n0.cdn.getcloudapp.com/items/OAujvYxD/e92d2e0f-3fff-4124-8e9b-18ea4bf87f3a.png?v=3242609435910c2ed287e97b3a3ef9c2"
         height="40"
@@ -31,26 +31,26 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Connect</a>
+          <a class="nav-link" href="/connect">Connect</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Conact</a>
+          <a class="nav-link" href="/contact">Contact</a>
         </li>
       </ul>
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <button type="button" class="btn btn-link px-2 me-2">
-          Login
+        <button type="button" class="btn btn-dark me-3">
+          <a class="nav-link" href="/signin">Sign in</a>
         </button>
-        <button type="button" class="btn btn-primary me-3">
-          Sign up
+        <button type="button" class="btn btn-dark me-3">
+          <a class="nav-link" href="/signup">Sign up</a>
         </button>
       </div>
     </div>
