--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,5 +1,45 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
-<main>
-  <section class="Sign in"></section>
-</main>
-<%- include('partials/footer.ejs') %>
+<%- include('partials/head.ejs') %>
+  <%- include('partials/navbar.ejs') %>
+    <main style="padding: 20px;">
+      <div class="container">
+      <div class="card">
+        <div class="card-header">
+          Sign in
+        </div>
+        <div class="card-body">
+          <form>
+            <!-- Email input -->
+            <div class="form-outline mb-3">
+              <input type="email" id="form1Example1" class="form-control" />
+              <label class="form-label" for="form1Example1">Email address</label>
+            </div>
+
+            <!-- Password input -->
+            <div class="form-outline mb-3">
+              <input type="password" id="form1Example2" class="form-control" />
+              <label class="form-label" for="form1Example2">Password</label>
+            </div>
+
+            <!-- 2 column grid layout for inline styling -->
+            <div class="row mb-4">
+              <div class="col d-flex justify-content-center">
+                <!-- Checkbox -->
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
+                  <label class="form-check-label" for="form1Example3"> Remember me </label>
+                </div>
+              </div>
+
+              <div class="col">
+                <!-- Simple link -->
+                <a href="#!">Forgot password?</a>
+              </div>
+            </div>
+
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-dark btn-block">Sign in</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    </main>
