--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,30 +1,90 @@
-<%- include('partials/head.ejs') %> <%- include('partials/navbar.ejs') %>
+<%- include('partials/head.ejs') %>
+  <%- include('partials/navbar.ejs') %>
 
-<main>
-  <section class="login">
-    <h2>WELCOME</h2>
-    <h3>Sign up</h3>
-    <h3><a href="signin.html">Sign In</a></h3>
-    <form action="">
-      <div class="div">
-        <label for="email">email</label>
-        <input type="email" id="email" required />
-      </div>
-      <div class="div">
-        <label for="username">Username</label>
-        <input type="name" id="username" required />
-      </div>
-      <div>
-        <label for="password">password</label>
-        <input type="password" minlength="8" id="password" required />
-      </div>
-      <div>
-        <label for="c-password">confirm password</label>
-        <input type="password" minlength="8" id="c-password" required />
-      </div>
-      <button type="submit">Sign Up</button>
-    </form>
-  </section>
-</main>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.1/css/all.min.css">
+    <main style="padding: 20px">
+      <section class="login">
+        <div class="container">
+          <div class="card">
+            <div class="card-header">
+              Sign up
+            </div>
+            <div class="card-body">
+              <form>
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+                <div class="row mb-4">
+                  <div class="col">
+                    <div class="form-outline">
+                      <input type="text" id="form3Example1" class="form-control" />
+                      <label class="form-label" for="form3Example1">First name</label>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="form-outline">
+                      <input type="text" id="form3Example2" class="form-control" />
+                      <label class="form-label" for="form3Example2">Last name</label>
+                    </div>
+                  </div>
+                </div>
 
-<%- include('partials/footer.ejs') %>
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                  <input type="email" id="form3Example3" class="form-control" />
+                  <label class="form-label" for="form3Example3">Email address</label>
+                </div>
+
+                <!-- Password input -->
+                <div class="form-outline mb-4">
+                  <input type="password" id="form3Example4" class="form-control" />
+                  <label class="form-label" for="form3Example4">Password</label>
+                </div>
+
+                <!-- Checkbox -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                  <label class="form-check-label" for="form2Example33">
+                    Subscribe to our newsletter
+                  </label>
+                </div>
+
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-dark btn-block mb-4">Sign up</button>
+
+                <!-- Register buttons -->
+                <div class="text-center">
+                  <p>or sign up with:</p>
+                  <a class="btn btn-outline-dark btn-floating m-1" href="https://www.facebook.com/groups/100DaysOfCode/"
+                    role="button">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+
+                  <a class="btn btn-outline-dark btn-floating m-1" href="https://twitter.com/ka11away" role="button"><i
+                      class="fab fa-twitter"></i>
+                  </a>
+
+                  <a class="btn btn-outline-dark btn-floating m-1" href="https://www.instagram.com/_100DaysOfCode/"
+                    role="button"><i class="fab fa-instagram"></i>
+                  </a>
+
+
+                  <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button">
+                    <i class="fab fa-discord"></i>
+                  </a>
+
+                  <a class="btn btn-outline-dark btn-floating m-1" href="https://www.youtube.com/c/DoTheOpposite" role="button"
+                  ><i class="fab fa-youtube"></i>
+                </a>
+          
+                <!-- Github -->
+                <a class="btn btn-outline-dark btn-floating m-1" href="https://github.com/Kallaway/100-days-of-code" role="button"
+                  ><i class="fab fa-github"></i
+                ></a>
+                </div>
+              </form>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+    </main>
